--- a/V49/latex-template/content/diskussion.tex
+++ b/V49/latex-template/content/diskussion.tex
@@ -1,2 +1,50 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+
+
+Eine Fehlerquelle, die sich auf alle Versuchsteile aufwirkt, ist die große Änderung der Temperatur während des Versuches,
+wodurch das Magnetfeld nicht stabil werden konnte und sich Ablesefehler in der Justierung nicht vermeiden ließen. 
+Des Weiteren können Verunreinigungen auf der Außenseite der Probe oder innerhalb dieser trotz einer erfolgten Reinigung 
+nicht ausgeschlossen werden.\\
+Die Relaxationszeiten ergaben sich zu 
+
+\begin{align*}
+    T_1 &= \SI{1.03(8)}{\second},\\
+    T_2 &= \SI{4(8)}{\second}.
+\end{align*}
+
+Hier ist $T_2 > T_2$, was der Theorievorhersage widerspricht. Allerdings ist der Fehler von $T_2$ sehr groß, was darauf 
+zurückzuführen ist, dass nur wenige Peaks des augenommenen Signals betrachtet werden konnten. \\
+Ein Vergleich mit den Literaturwerten \cite{diff}
+
+\begin{align*}
+    T_\text{1,lit} &= \SI{3.09(15)}{\second},\\
+    T_\text{2,lit} &= \SI{1.52(9)}{\second},
+\end{align*}
+
+liefert die Abweichungen $\SI{66.6}{\percent}$ für $T_1$ und $\SI{163.2}{\percent}$ für $T_2$.\\
+Für die Diffusionskonstante ergab sich der Wert 
+
+\begin{equation*}
+    D = \SI{1.93(5)e-9}{\metre^2\per\second}.
+\end{equation*}
+
+Der Vergleich mit dem Literaturwert \cite{diff}
+
+\begin{equation*}
+    D_\text{lit} = \SI{2.78(4)e-9}{\metre^2\per\second}
+\end{equation*}
+
+liefert eine Abweichung von $\SI{30.6}{\percent}$.\\
+Abschließend wird der Molekülradius von Wasser betrachtet: \cite{radius} 
+
+\begin{align*}
+    r_\text{Exp} &= \SI{1.258(33)e-10}{\metre},\\
+    r_\text{hcp} &= \SI{1.74e-10}{\metre},\\
+    r_\text{lit} &= \SI{1.69e-10}{\metre}.
+\end{align*}
+
+Dabei weicht $r_\text{hcp}$ um $\SI{3}{\percent}$ von $r_\text{lit}$ ab, woraus sich schliesen lässt, dass die hcp Struktur eine gute 
+Annahme darstellt. Die Abweichung von $r_\text{Exp}$ beträgt $\SI{25.5}{\percent}$. Diese Abweichung liegt vermutlich an der großen 
+Temperaturveränderung während des Versuchs. Außerdem ist erkennbar, dass $D$ im Experiment nicht perfekt einer $\tau^3$-Abhängigkeit 
+folgt. Dies deutet auf Messfehler von $D$ hin, was sich auch auf die Bestimmung von $r$ auswirkt. 
