--- a/V49/latex-template/lit.bib
+++ b/V49/latex-template/lit.bib
@@ -50,3 +50,18 @@
   author          = {Natinal Library of Medicine},
   url             = {https://pubchem.ncbi.nlm.nih.gov/compound/Water#datasheet=LCSS&section=Solubility}
 }
+
+@manual{diff, 
+  author = {DC Chang u.a.},
+  title = {Spin echo studies on cellular water},
+  journal = {Nature},
+  year = {1972}
+}
+
+@manual{radius,
+  title        = {Molecular volumes and the Stokes-Einstein equation},
+  author       = {John T. Edward},
+  journal = {Journal of Chemical Education},
+  year = 1970,
+  doi = {10.1021/ed047p261}
+}
