--- a/V49/latex-template/lit.bib
+++ b/V49/latex-template/lit.bib
@@ -65,3 +65,16 @@
   year = 1970,
   doi = {10.1021/ed047p261}
 }
+
+@article{spinecho,
+  title           = {Spin echo},
+  journal         = {ResearchGate},
+  year            = {20019},
+  url = {https://www.researchgate.net/figure/The-spin-echo-pulse-sequence-showing-the-evolution-of-magnetization-vectors_fig23_301565192/actions#reference}
+}
+
+@manual{Anleitung2,
+  author = {TU Dortmund},
+  title = {Messung von Diffusionskonstanten mittels gepulster Kernspinresonanz: Grundlagen, Wechselwirkungen, Pulsfolgen, Relaxationstheorie und Quadraturdetektion},
+  year = 2019
+}
