--- a/V49/latex-template/content/durchfuehrung.tex
+++ b/V49/latex-template/content/durchfuehrung.tex
@@ -3,7 +3,7 @@
 
 Das homogene $\vec{B_0}$ wird durch Einlassung der Proben in einen Permanentmagneten 
 realisiert. Senkrecht dazu erzeugt die Modulationsspule zusätzlich ein Wechselfeld im Probenbereich,
-durch welches eine Probenmagnetisierung induziert. Die präzendierende Magnetisierung
+welches eine Probenmagnetisierung induziert. Die präzendierende Magnetisierung
 bewirkt zudem einen Induktionsstrom in der Spule, der als Nachweis für die Magnetisierung fungiert.
 Weiterhin ist die Spule zusammen mit einem Kondensator variabler Kapazität Teil eines Schwingkreises
 mit einer korrespondierend zur Lamorfrequenz abstimmbaren Resonanzfrequenz.
@@ -39,13 +39,13 @@ Zur Untersuchung einer Wasserprobe wird dessen $T_1$ über eine $\SI{180}{\degre
 mit $P = \SI{10}{\second}$ gemessen. Dies erfolgt durch Variation dieser Zeit zwischen den Pulsen
 und der Amplitudenmessung des FID.
 
-Zur $T_2$-Bestimmung werden ein $\SI{90}{\degree}$-Puls gefolgt von vielen $\SI{180}{\degree}$-Pulsen.
+Zur $T_2$-Bestimmung werden ein $\SI{90}{\degree}$-Puls gefolgt von vielen $\SI{180}{\degree}$-Pulsen angewandt.
 Die Signalbildwerte werden vom Oszilloskop gespeichert.
 
-Zur Diffusionsmessung wird eine $\SI{90}{\degree}$-$\SI{180}{\degree}$-Pulsfolge angewandt
-und die z-Komponente des Feldgradients wird umgepolt und dann maximal eingestellt.
+Zur Diffusionsmessung wird eine $\SI{90}{\degree}$-$\SI{180}{\degree}$-Pulsfolge angewandt,
+die z-Komponente des Feldgradients umgepolt und dann maximal eingestellt.
 Die gemessenen Spin-Echos werden dann am Oszilloskop bezüglich ihrer Signalhöhe und Lage im Zeitintervall 
-zwischen den Pulsen analysiert
+zwischen den Pulsen analysiert.
 
 Weiterhin wird aufrund der Temperaturabhängigkeit der Homogenität des $B_0$ die sich ggf. 
 ändernde Temperatur $T$ vor und nach den Messungen mit einem Thermoelement ermittelt.
