--- a/V44/latex-template/content/theorie.tex
+++ b/V44/latex-template/content/theorie.tex
@@ -118,10 +118,11 @@ In Abbildung \ref{fig:geo} ist zu sehen, dass der verwendete Strahl eine größe
 Aus diesem Grund kann nur ein Teil der Intensität $I$ reflektiert und später detektiert werden. Dies wird durch den 
 Geometriefaktor $G$ berücksichtigt:
 
-\begin{align*}
+\begin{align}
+    \label{eqn:geome}
     G &= \frac{D\sin{\left(\alpha_i\right)}}{d_0} \qquad &\text{mit} \qquad \alpha_i < \alpha_g,\\
     G &= 1 \qquad &\text{mit} \qquad \alpha_i > \alpha_g.
-\end{align*}
+\end{align}
 
 Dabei ist $D\sin{\left(\alpha_i\right)}$ die Strahlbreite, die die Probenoberfläche trifft und $d_0$ die gesamte
 Strahlbreite.  
