--- a/V44/latex-template/lit.bib
+++ b/V44/latex-template/lit.bib
@@ -5,9 +5,16 @@
   url = {http://e1.physik.tu-dortmund.de/cms/Medienpool/Downloads/Roentgenreflektometrie_Versuch.pdf}
 }
 
-@maunal{Anleitung,
+@manual{Anleitung,
   author = {TU Dortmund},
   title = {V44 Röntgenreflektometrie},
   url = {https://moodle.tu-dortmund.de/pluginfile.php/1278137/mod_resource/content/1/V44.pdf},
   year = 2019
+}
+
+@book{tolan,
+    author = {Tolan, Metin},
+    title = {X-Ray Scattering from Soft Matter Thin Films, Reflectivity of X-Rays from Surfaces - Multiple Interfaces},
+    year = {1999},
+    publisher = {Springer-Verlag},
 }
